proftpd-dfsg (1.3.5~rc1-1) experimental; urgency=low

  * New upstream pre-release.
  * Refreshed main patchset for 1.3.5 source tree.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 08 Jan 2013 15:42:27 +0100

proftpd-dfsg (1.3.4a-3) unstable; urgency=low

  [SECURITY] New patch 3841 fixes CVE-2012-6095: a possible race
  condition in the handling of the MKD/XMKD FTP commands, when the UserOwner 
  directive is involved, and the attacker is on the same physical 
  machine as a running proftpd.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 08 Jan 2013 12:08:47 +0100

proftpd-dfsg (1.3.4a-2) unstable; urgency=low

  [ Mahyuddin Susanto ]
  * Team upload.
  * Fix typo in proftpd.conf templates line 133, thanks John Smith.
    (Closes: #655630)
  * Updated Danish translations, thanks Joe Dalton. (Closes: #659326)
  * debian/copyright:
    - Resync with latest dep5 format.
    - Use stand-alone license paragraph for repeatable license.
    - Use whitespace instead of comma separated for Files fields.
    - wrap-and-sort.
  * debian/control:
    - Bump Standards-Version to 3.9.3.
  * debian/rules: Enabled hardened flags, patch from Moritz Muehlenhoff.
    (Closes: #657213)
  * debian/changelog: Wrap latest changelog line 3 to 80 line, thanks lintian.
  * debian/proftpd-basic.install: Add missing sftp-sql modules.
    (Closes: 665191)

  [ Francesco Paolo Lovergine ]
  * Added a note about the need of removing rfc/ folder in upstream sources.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 28 Mar 2012 15:24:13 +0200

proftpd-dfsg (1.3.4a-1) unstable; urgency=low

  * New upstream release.
  * Merged patch removed: 3711.
  * Now enabled PCRE instead of glibc POSIX regex and added required
    libpcre3-dev build-dep.
  * Added libpcre3-dev dependency to libproftpd-dev due to header files
    inclusion.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 21 Nov 2011 13:29:13 +0100

proftpd-dfsg (1.3.4~rc3-2) unstable; urgency=high
