@@ -1,0 +1,1 @@
+usr/lib/proftpd/mod_geoip.so
