@@ -2,6 +2,8 @@ proftpd-dfsg (1.3.5~rc1-1) experimental; urgency=low
 
   * New upstream pre-release.
   * Refreshed main patchset for 1.3.5 source tree.
+  * Added mod_geoip module among contributed module and a new binary
+    package to depend on GeoIP library.
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 08 Jan 2013 15:42:27 +0100
 
